--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.1",
     "react-query": "^3.24.5"
   },
   "devDependencies": {
