--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@hookform/resolvers": "^2.8.2",
     "axios": "^0.21.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.1",
-    "react-query": "^3.24.5"
+    "react-query": "^3.24.5",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
